[package]
name = "harmonious-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-identity = "0.4"

chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.9"
r2d2 = "0.8.9"
rust-argon2 = "1"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = "0.10.0-rc.5"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
time = "0.3.9"
actix-files = "0.6"
http = "0.2.6"
